--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,54 @@
+# =========================
+# Dependencies
+# =========================
 node_modules/
+
+# =========================
+# Next.js build output
+# =========================
+.next/
+out/
+
+# =========================
+# Production builds
+# =========================
 dist/
 build/
+
+# =========================
+# Environment variables
+# =========================
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# =========================
+# Logs
+# =========================
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# =========================
+# OS files
+# =========================
 .DS_Store
+Thumbs.db
+
+# =========================
+# Vercel
+# =========================
+.vercel
+
+# =========================
+# TypeScript
+# =========================
+*.tsbuildinfo
+
+# =========================
+# Turbopack cache
+# =========================
+.turbo
